# project-tmplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: 1-lint.yml  2-build.yml
.scripts/: docs.py
docs/audits/: index.md
docs/audits/domain1/: example-audit-1.md  example-audit-2.md
docs/audits/domain2/: example-audit-1.md  example-audit-2.md
docs/backlog/: index.md
docs/backlog/domain1/: example-backlog-1.md  example-backlog-2.md
docs/backlog/domain2/: example-backlog-1.md  example-backlog-2.md
docs/tascks/: index.md
docs/tascks/domain1/: example-task-1.md  example-task-2.md
docs/tascks/domain2/: example-task-1.md  example-task-2.md
templates/: architecture-template.md  audit-template.md  decision-template.md  getting-started-template.md  guide-template.md  index-template.md  index.md  reference-template.md  standard-template.md  task-template.md
